--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>канава.com</title>
 </head>
 <body>
-    <a href="./home/login.html" 
-        target="popup" 
-        onclick="window.open('./home/login.html','popup','width=590,height=495'); return false;">
+    <a href="./home/login.html" target="popup" onclick="window.open('./home/login.html','popup','width=590,height=495'); return false;">
             ВОЙТИ
     </a>
 </body>
